1.完善部分类型转换的问题