@@ -1,6 +1,7 @@
 package top.yxlgx.wink.common.jpa.orm;
 
 
+import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.util.StrUtil;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.reflect.FieldUtils;
@@ -17,10 +18,14 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+/**
+ * @author yanxin
+ * @Description: tuple转实体对象
+ */
 public class JpaResultTransformer implements TupleTransformer {
 
-    private Class<?> clazz;
-    private Map<String, Field> fieldMap;
+    private final Class<?> clazz;
+    private final Map<String, Field> fieldMap;
 
     public JpaResultTransformer(Class<?> clazz) {
         this.clazz = clazz;
@@ -35,7 +40,7 @@ public class JpaResultTransformer implements TupleTransformer {
     @SneakyThrows
     @Override
     public Object transformTuple(Object[] tuple, String[] aliases) {
-        Object object = clazz.newInstance();
+        Object object = clazz.getDeclaredConstructor().newInstance();
         for (int i = 0; i < tuple.length; i++) {
             String fieldName = "";
             if (aliases[i].contains("_")) {
@@ -46,7 +51,8 @@ public class JpaResultTransformer implements TupleTransformer {
             try {
                 Field field = getField(fieldName);
                 if (field != null && tuple[i] != null) {
-                    autoSetField(tuple[i], object, field);
+                    //autoSetField(tuple[i], object, field);
+                    BeanUtil.setFieldValue(object, field.getName(), tuple[i]);
                 }
             } catch (Exception e) {
                 e.printStackTrace();
@@ -60,52 +66,5 @@ public class JpaResultTransformer implements TupleTransformer {
 
     private Field getField(String name) {
         return fieldMap.getOrDefault(name, null);
-    }
-
-    /**
-     * 自动配置字段值
-     *
-     * @param tuple
-     * @param target
-     * @param field
-     * @throws IllegalAccessException
-     */
-    private void autoSetField(Object tuple, Object target, Field field) throws IllegalAccessException {
-        if (field == null || tuple == null) {
-            return;
-        }
-        field.setAccessible(true);
-        //常见类型处理
-        if (field.getType() == String.class) {
-            field.set(target, tuple.toString());
-        } else if (field.getType() == Integer.class) {
-            field.set(target, Integer.parseInt(tuple.toString()));
-        } else if (field.getType() == Long.class) {
-            field.set(target, Long.parseLong(tuple.toString()));
-        } else if (field.getType() == Double.class) {
-            field.set(target, Double.parseDouble(tuple.toString()));
-        } else if (field.getType() == Float.class) {
-            field.set(target, Float.parseFloat(tuple.toString()));
-        } else {
-            if (field.getType() == Date.class) {
-                if (tuple instanceof Timestamp) {
-                    long time = ((Timestamp) tuple).getTime();
-                    field.set(target, new Date(time));
-                }
-            } else if (field.getType() == LocalDate.class) {
-                if (tuple instanceof Timestamp) {
-                    long time = ((Timestamp) tuple).getTime();
-                    field.set(target, LocalDate.ofInstant(Instant.ofEpochMilli(time), ZoneId.systemDefault()));
-                }
-            } else if (field.getType() == LocalDateTime.class) {
-                if (tuple instanceof Timestamp) {
-                    long time = ((Timestamp) tuple).getTime();
-                    field.set(target, LocalDateTime.ofInstant(Instant.ofEpochMilli(time), ZoneId.systemDefault()));
-                }
-            }
-
-        }
-
-
     }
 }
